@@ -16,6 +16,7 @@
 * Braintree: Fix passing phone-only billing address [curiousepic] #3025
 * Litle: Capitalize check account type [curiousepic] #3028
 * Braintree: Account for nil billing address fields [curiousepic] #3029
+* Realex: Add verify [kheang] #3030
 
 == Version 1.85.0 (September 28, 2018)
 * Authorize.Net: Support custom delimiter for cim [curiousepic] #3001
